[gd_scene load_steps=41 format=3 uid="uid://do2wxtc8iykvx"]

[ext_resource type="Script" uid="uid://c81bamqh4sd16" path="res://player/player.gd" id="1_83hs8"]
[ext_resource type="Script" uid="uid://025a6rahqpjp" path="res://player/dash_component.gd" id="2_3c3w1"]
[ext_resource type="Shader" uid="uid://b8d6aipp6pnkj" path="res://shaders/blink.gdshader" id="2_gskgj"]
[ext_resource type="Script" uid="uid://b3x0qavapdr4o" path="res://player/movement_component.gd" id="3_wnvi2"]
[ext_resource type="Script" uid="uid://de6ea1onpjau2" path="res://player/animation_component.gd" id="5_aqcbf"]
[ext_resource type="Texture2D" uid="uid://bw1aakleqved6" path="res://player/SquidSheet.png" id="5_x8kxw"]
[ext_resource type="Script" uid="uid://do4dfmxomugv2" path="res://player/health_component.gd" id="6_gskgj"]
[ext_resource type="Script" uid="uid://dfa14bmp0xcdt" path="res://player/bubble_collision.gd" id="8_06mnu"]

[sub_resource type="Gradient" id="Gradient_aqcbf"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gskgj"]
gradient = SubResource("Gradient_aqcbf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_06mnu"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 10.0
initial_velocity_min = 107.69
initial_velocity_max = 176.92
gravity = Vector3(0, 98, 0)
scale_min = 3.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_gskgj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gskgj"]
resource_local_to_scene = true
shader = ExtResource("2_gskgj")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_x8kxw"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g0h"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4f8b"]
atlas = ExtResource("5_x8kxw")
region = Rect2(96, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8epa"]
atlas = ExtResource("5_x8kxw")
region = Rect2(0, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqcbf"]
atlas = ExtResource("5_x8kxw")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gskgj"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_06mnu"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhpjh"]
atlas = ExtResource("5_x8kxw")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndjxb"]
atlas = ExtResource("5_x8kxw")
region = Rect2(0, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qrx2"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_b32pr"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbkom"]
atlas = ExtResource("5_x8kxw")
region = Rect2(96, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_w24id"]
atlas = ExtResource("5_x8kxw")
region = Rect2(0, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewl2"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofhxi"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu5hk"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6miu"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlfor"]
atlas = ExtResource("5_x8kxw")
region = Rect2(96, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m0d2"]
atlas = ExtResource("5_x8kxw")
region = Rect2(0, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nth8"]
atlas = ExtResource("5_x8kxw")
region = Rect2(32, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tqfn"]
atlas = ExtResource("5_x8kxw")
region = Rect2(64, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_stbqk"]
atlas = ExtResource("5_x8kxw")
region = Rect2(96, 144, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_d4g0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8kxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g0h")
}],
"loop": true,
"name": &"dash",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4f8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8epa")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqcbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gskgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06mnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhpjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndjxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qrx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b32pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbkom")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w24id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofhxi")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu5hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6miu")
}],
"loop": true,
"name": &"jump_loop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlfor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m0d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tqfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stbqk")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_gskgj"]
colors = PackedColorArray(1, 1, 1, 0.796078, 1, 1, 1, 0.121569)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_06mnu"]
gradient = SubResource("Gradient_gskgj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mhpjh"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 10, 1)
direction = Vector3(0, -1, 0)
gravity = Vector3(0, -44, 0)
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_06mnu")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gskgj"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gskgj"]
size = Vector2(29, 29)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "dash_component", "health_component", "sprite", "camera")]
script = ExtResource("1_83hs8")
movement_component = NodePath("Components/MovementComponent")
dash_component = NodePath("Components/DashComponent")
health_component = NodePath("Components/HealthComponent")
sprite = NodePath("PlayerSprite")
camera = NodePath("Camera2D")

[node name="Ink" type="GPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(0, -15)
emitting = false
amount = 100
lifetime = 0.75
process_material = SubResource("ParticleProcessMaterial_06mnu")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_gskgj")
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_d4g0h")
animation = &"idle"

[node name="Bubbles" type="GPUParticles2D" parent="PlayerSprite"]
show_behind_parent = true
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_mhpjh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_gskgj")

[node name="Components" type="Node" parent="."]

[node name="DashComponent" type="Node" parent="Components" node_paths=PackedStringArray("player", "movement_comp", "dash_particles", "cooldown_timer")]
script = ExtResource("2_3c3w1")
player = NodePath("../..")
movement_comp = NodePath("../MovementComponent")
dash_particles = NodePath("../../Ink")
cooldown_timer = NodePath("DashCooldown")

[node name="DashCooldown" type="Timer" parent="Components/DashComponent"]
one_shot = true

[node name="MovementComponent" type="Node" parent="Components" node_paths=PackedStringArray("player", "coyote_timer", "wall_jump_timer")]
script = ExtResource("3_wnvi2")
player = NodePath("../..")
coyote_timer = NodePath("../../CoyoteTimer")
wall_jump_timer = NodePath("../../WallJumpTimer")

[node name="AnimationComponent" type="Node" parent="Components" node_paths=PackedStringArray("player", "sprite", "movement_component", "bubble_particles")]
script = ExtResource("5_aqcbf")
player = NodePath("../..")
sprite = NodePath("../../PlayerSprite")
movement_component = NodePath("../MovementComponent")
bubble_particles = NodePath("../../PlayerSprite/Bubbles")

[node name="HealthComponent" type="Node" parent="Components" node_paths=PackedStringArray("player", "iframe_timer")]
script = ExtResource("6_gskgj")
player = NodePath("../..")
iframe_timer = NodePath("IFrames")

[node name="IFrames" type="Timer" parent="Components/HealthComponent"]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -25)
zoom = Vector2(1.2, 1.2)
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="." node_paths=PackedStringArray("player")]
collision_layer = 2
collision_mask = 2
script = ExtResource("8_06mnu")
player = NodePath("..")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, -14.5)
shape = SubResource("RectangleShape2D_gskgj")

[connection signal="timeout" from="Components/DashComponent/DashCooldown" to="Components/DashComponent" method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="Components/MovementComponent" method="_on_wall_jump_timer_timeout"]
